# abi-animus-lab-tutorials

./: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  GITHUB_SETUP.md  README.md  RELEASE_NOTES.md  docker-compose.prod.mac.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
tutorial_2_5_Argus_Ghitti_Davis/: README.md  requirements.txt  tutorial_2_5_test.ipynb
tutorial_2_5_Argus_Ghitti_Davis/requirements_cpp/: PETSc_HOWTO.txt  nlohmann-json_HOWTO.txt
tutorial_2_5_Argus_Ghitti_Davis/requirements_cpp/make_and_run_scripts/: MakefileCoupler  MakefilePETSC  main0d
tutorial_4/: tutorial_4.ipynb
tutorial_4_Hoogeveen_Hermeling/: fromDevicestoData_Exercise.ipynb  requirements.txt
tutorial_4_Hoogeveen_Hermeling/DatafromDevices/44/long_recording_1/: calamari_all_streams.kst  finapres Basic Nova.csv  finapres fiAP.csv  nl.imec.hawk.accel.x.csv  nl.imec.hawk.accel.y.csv  nl.imec.hawk.accel.z.csv  nl.imec.hawk.cpu_stats.csv  nl.imec.hawk.ecg2.csv  nl.imec.hawk.ppg.ir.csv  nl.imec.hawk.soc.csv  nl.imec.hawk.status_info.csv  nl.imec.hawk.timestamp.csv
tutorial_4_Hoogeveen_Hermeling/DatafromDevices/44/long_recording_2/: finapres Basic Nova.csv  (+10 more)
tutorial_5/: .dockerignore  Dockerfile  README.md  docker-compose.yml  prompt.md  test_opencor.ipynb  tutorial_5.ipynb
tutorial_5/requirements_cpp/: SUNDIALS_HOWTO.txt
tutorial_5/requirements_cpp/make_and_run_scripts/: Makefile  MakefilePETSC  main0d.cpp.cvodes  main0d.cpp.petsc  run_coupler.bash
tutorial_6/: environment.yml  test.ipynb
tutorial_6/example_1/: CMakeLists.txt  Makefile  cmake_install.cmake  ex1_simple2D.cco  example_1  example_1.cpp
tutorial_6_Giudici/: Arterial_const_mod_Notebook_1.ipynb  Arterial_const_mod_Notebook_2.ipynb  Arterial_const_mod_Notebook_3.ipynb
tutorial_6_MasoTalou_SharifzadehKermani/: .gitmodules
tutorial_Alireza/: ex1_simple3D_1.vtp  tutorial_Alireza.ipynb
tutorial_Alireza/example_1/: CMakeCache.txt  CMakeLists.txt  Makefile  ex1_simple2D.vtp  example_1.cpp
tutorial_VITAL_2026/: README.md
(+11 files in other folders)
